--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/navbar/navbarNormal' %>
         <br><br><br>
         <br><br><br><br>
 <p class="notice"><%= notice %></p>
@@ -10,7 +11,7 @@
         </div> 
 <article class="container_fluid test_wrap" id="wrapper_diensten"> 
 
-        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 h50 fixed_blog zp1"><br><br><br><br><br><br><br><br><br><br><br><br>
+        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 h50 fixed_blog zp1"><br><br><br><br><br>
         <div class="container_social_share">
             <%= social_share_button_tag(@article.title, :popup => "true", class: "social_share_shift") %></div>
         </div>
