--- a/app/views/pages/over_ons.html.erb
+++ b/app/views/pages/over_ons.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/navbar/navbarNormal' %>
+
 <article class="container_fluid" id="wrapper_diensten"> 
 
          <div class="overlay_white"></div>  
