--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,11 +1,19 @@
+<%= render 'shared/navbar/navbarNormal' %>
 <article class="wrapper_alt_landing althead container_fluid">
     <div class="overlay_black"></div>      
     <div class="row container_home_landing place_middle">
-        <div class="col-lg-6 col-md-9 col-sm-10 col-xs-12 col-centered">
+        <div class="col-lg-6 col-md-9 col-sm-10 hidden-xs col-centered">
             <h2 class="white">Digitale Transformatie</h2>
             <p class="white titel_tekst">
                 Wij helpen bedrijven hun business modellen moderniseren, de ervaring voor hun klanten te verbeteren en hun online marketing efficienter te maken
             </p>
+         </div>
+         <div class="hidden-lg hidden-md hidden-sm col-xs-12">
+            <h2 class="white phoneh2">Digitale Transformatie</h2>
+            <p class="white titel_tekst">
+                Wij helpen bedrijven hun business te moderniseren.
+            </p>
+
          </div>
     </div>
     <div class="clearfix"></div>
