--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/navbar/navbarNormal' %>
     <div class="wrapper_type1 wrapper_header35" id="wrapper_header">
         <div id="background_container"></div>
         <div class="overlay_black"></div>
