--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
+<%= render 'shared/navbar/navbarHome' %>
+
 <div id="overlay_video"></div>
 <div id="videoBox">
-    <iframe id="overlay_2068_player" width="560" height="315" src="https://www.youtube.com/embed/z5tugxy70MY" frameborder="0" allowfullscreen></iframe>  
+    <iframe id="overlay_2068_player" src="https://www.youtube.com/embed/z5tugxy70MY" frameborder="0" allowfullscreen></iframe>  
     <button onmousedown="toggleOverlay()">close</button>
 </div>
 
@@ -8,15 +10,17 @@
         <div class="overlay_black"></div>      
 
         <div class="row container_home_landing place_middle">
-            <div class="col-lg-6 col-md-9 col-sm-10 col-xs-10 col-centered">
+            <div class="col-lg-6 col-md-9 col-sm-10 hidden-xs col-centered">
                 <h1 class="tagline white">Wij maken de</h1><h1 class="tagline red" id="tagline2">diqitale</h1><h1 class="tagline white">leiders van de toekomst</h1>
             </div>
         <div class="col-lg-6 col-md-9 col-sm-10 hidden-xs col-centered">
                 <p class="white titel_tekst">
                     Wij van DIQITAL zijn uw partner in uw digitale transformatie. Wij leren bedrijven en mensen master storytellers te zijn, een hechte relatie op te bouwen met online consumenten en strategisch gebruik te maken van alle hulpmiddellen van het online tijdperk.</p>            
-            </div>
+        </div>
 
         <div class="hidden-lg hidden-md hidden-sm col-xs-10 col-centered">
+        <h1 class="tagline white phoneh1">Wij maken de</h1><h1 class="tagline red phoneh1" id="tagline2">diqitale</h1><h1 class="tagline white phoneh1">leiders van de toekomst</h1>
+
         <p class="white titel_tekst">
                     Bekijk onze artikelen voor onze expertise.</p> 
         </div>
@@ -26,7 +30,8 @@
         </div>
         
     </article>
-            <div class="down_arrow"><figure><%= image_tag('down_arrow.png', class: "full_size")%></figure></div>
+            <div class="down_arrow hidden-xs"><figure><%= image_tag('down_arrow.png', class: "full_size")%></figure></div>
+            <div class="down_arrow hidden-lg hidden-md hidden-sm phonearrow"><figure><%= image_tag('down_arrow.png', class: "full_size")%></figure></div>
 
 
 
@@ -69,7 +74,7 @@
         <div class="col-12 wrapper_inner">
 
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <h2 class="white">Artikel_titel</h2>
+                    <h2 class="white">Artikel titel</h2>
                     <br><br>
                     <p class="tekst white">
 
