--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/navbar/navbarNormal' %>
         <br><br><br>
         <br><br><br><br>
 <p class="notice"><%= notice %></p>
@@ -10,7 +11,7 @@
         </div> 
 <article class="container_fluid test_wrap" id="wrapper_diensten"> 
 
-        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 h50 fixed_blog zp1"><br><br><br><br><br><br><br><br><br><br><br><br>
+        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 h50 fixed_blog zp1"><br><br><br><br><br>
         <div class="container_social_share">
             <%= social_share_button_tag(@story.title, :popup => "true", class: "social_share_shift") %></div>
         </div>
@@ -22,7 +23,7 @@
             <%= link_to 'Edit', edit_story_path(@story), class: "black" %>
             <% end %>
 
-            <%= link_to 'Back', stories_path, class: "black" %></p><br>
+            <%= link_to 'Back', stories_path, class: "black silverHover" %></p><br>
                 <h3 class="header_article"><%= @story.title %></h3><hr class="article_show_hr">
 
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
