--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -73,14 +73,14 @@
                     <li class="sm_list"><button class="sm_button_bw"><%= link_to image_tag("icon_bw_yt.png"), 'https://www.youtube.com' %></button></li>
                 </ul>
 
-            <div class="must_read_container">
+<!--            <div class="must_read_container">
                 <h2 class="alignright">Must Read!</h2>
                 <figure></figure>
                 <h3 class="black">Test Titel</h3>
                 <hr>
                 <p>Dit artikel gaat over blablabla</p>  
                 <%= link_to 'Lees Meer', article_path(@articles.last), class: "lees_meer"%>
-            </div>
+            </div>-->
 
         </div>
             <div class="clearfix"></div>
