--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -2,8 +2,8 @@
 
 <div id="overlay_video"></div>
 <div id="videoBox">
-    <iframe id="overlay_2068_player" width="560" height="315" src="https://www.youtube.com/embed/z5tugxy70MY" frameborder="0" allowfullscreen></iframe>  
-    <button onmousedown="toggleOverlay()">close</button>
+     <button class="closeBut" onmousedown="toggleOverlay()"><%= image_tag('closeIMG', class: "closeIMG")%></button><br>
+     <iframe id="overlay_2068_player" src="https://www.youtube.com/embed/z5tugxy70MY" frameborder="0" allowfullscreen></iframe>  
 </div>
 
 
