--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -123,11 +123,15 @@ body {
     height: 100%;
     position: relative;
     width: 100%;
-    margin-top: -9em;
+
+    /*background-image: url('ipadhome.jpg'); 
+    background-repeat: no-repeat;
+    background-size: cover; 
+    background-position: center center;
+    background-attachment: fixed;*/
 }
 
 .container_home_landing{
-    margin-top: 9em;
     position: relative;
     width: inherit;
 }
@@ -159,7 +163,7 @@ body {
 }
 
 #wrapper_diensten{
-    padding: 10em 0 0em 0;
+    padding: 0 0 10em 0;
     position: relative;
     width: 100%;
 }
@@ -522,6 +526,29 @@ div.black_box:hover{
 
 }
 
+.overlay_img_big{
+    width: inherit;
+    height: inherit;
+    position: absolute;
+    z-index: -2;
+    background-image: url('ipadhome.jpg'); 
+    background-repeat: no-repeat;
+    background-size: cover; 
+    background-position: center center;
+    background-attachment: fixed;
+}
+
+.overlay_img_small{
+    width: inherit;
+    height: inherit;
+    position: absolute;
+    z-index: -2;
+    background-image: url('ipadhome2.jpg'); 
+    background-repeat: no-repeat;
+    background-size: cover; 
+    background-position: center center;
+    background-attachment: fixed;
+}
 
 
 
@@ -530,7 +557,7 @@ div.black_box:hover{
     background-color: white;
     width: 100%;
     height: 100%;
-    opacity: 0.8;
+    opacity: 0.95;
     position: absolute;
     z-index: -1;
 }
