--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -531,7 +531,7 @@ div.black_box:hover{
     height: inherit;
     position: absolute;
     z-index: -2;
-    background-image: url('ipadhome.jpg'); 
+    background-image: url('/app/assets/images/ipadhome.jpg'); 
     background-repeat: no-repeat;
     background-size: cover; 
     background-position: center center;
