--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <div id="overlay_video"></div>
 <div id="videoBox">
-     <button class="closeBut" onmousedown="toggleOverlay()"><%= image_tag('closeIMG', class: "closeIMG")%></button><br>
+     <button class="closeBut" onmousedown="toggleOverlay()"><%= image_tag('closeIMG.png', class: "closeIMG")%></button><br>
      <iframe id="overlay_2068_player" src="https://www.youtube.com/embed/z5tugxy70MY" frameborder="0" allowfullscreen></iframe>  
 </div>
 
