--- a/app/views/shared/_contactform.html.erb
+++ b/app/views/shared/_contactform.html.erb
@@ -1,4 +1,4 @@
-    <article class="container_fluid white" style="background-color: red;" id="wrapper_contact">
+    <article class="container_fluid white" style="background-color: #ff4848;" id="wrapper_contact">
     <div class="col-12 wrapper_inner_contact contact_p">
 
         <h3 class="white">Meer weten?</h3><br>
