--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,26 +7,19 @@
 </div>
 
     <article class="wrapper_home_landing container_fluid">
-        <div  class="overlay_black" style="opacity: 0.4">
+        <div  class="overlay_black">
         </div>      
-        <div class="overlay_img_big hidden-xs"></div>
-        <div class="overlay_img_small hidden-lg hidden-md hidden-sm"></div>
+        <div class="overlay_img"></div>
 
         <div class="row container_home_landing place_middle">
-            <div class="col-lg-6 col-md-9 col-sm-10 hidden-xs col-centered">
+            <div class="col-lg-6 col-md-9 col-sm-10 col-xs-10 col-centered">
                 <h1 class="tagline white">Wij maken de</h1><h1 class="tagline red" id="tagline2">diqitale</h1><h1 class="tagline white">leiders van de toekomst</h1>
             </div>
-        <div class="col-lg-6 col-md-9 col-sm-10 hidden-xs col-centered">
-                <p class="white titel_tekst">
-                    Wij van DIQITAL zijn uw partner in uw digitale transformatie. Wij leren bedrijven en mensen master storytellers te zijn, een hechte relatie op te bouwen met online consumenten en strategisch gebruik te maken van alle hulpmiddellen van het online tijdperk.</p>            
+        <div class="col-lg-6 col-md-9 col-sm-10 col-xs-10 col-centered">
+                <p class="white titel_tekst hidden-xs">
+                    Wij van DIQITAL zijn uw partner in uw digitale transformatie. Wij leren bedrijven en mensen master storytellers te zijn, een hechte relatie op te bouwen met online consumenten en strategisch gebruik te maken van alle hulpmiddellen van het online tijdperk.</p>   
         </div>
 
-        <div class="hidden-lg hidden-md hidden-sm col-xs-10 col-centered">
-        <h1 class="tagline white phoneh1">Wij maken de</h1><h1 class="tagline red phoneh1" id="tagline2">diqitale</h1><h1 class="tagline white phoneh1">leiders van de toekomst</h1>
-
-        <p class="white titel_tekst">
-                    Bekijk onze artikelen voor onze expertise.</p> 
-        </div>
         <div class="box_home_landing box white_box col-centered"><%= link_to " > ", articles_path, class: "pijl"%><%= link_to "Publicaties", articles_path, class: "link_tekst"%>
         </div>
 
@@ -39,8 +32,7 @@
 
 
 <article class="container_fluid col-12" id="wrapper_diensten"> 
-    <div class="overlay_white"></div>
-        <div class="col-12 wrapper_inner ">
+        <div class="col-12 wrapper_inner wrap_content_inner">
             <h2>Onze Diensten</h2><br>
             <p class="tekst">Wij gebruiken onze kennis om een op maat gemaakte online business strategie te formuleren die gebouwd is voor de lange termijn.</p>
 
@@ -68,80 +60,65 @@
 
     <div class="clearfix"></div>
 
-    <div class="box black_box" id="dienst_box"><%= link_to " > ", services_path, class: "pijl"%><%= link_to "Meer informatie", services_path, class: "link_tekst link_black"%></div>
+    <div class="box black_box" id="dienst_box"><%= link_to " > ", services_path, class: "pijl"%><%= link_to "Meer informatie", services_path, class: "link_tekst1 link_black"%></div>
 
 </article>
 
-<article class="container_fluid col-12 wrapper_home" id="wrapper_blog">   
-    <div class="overlay_black"></div>
+<article class="container_fluid col-12 wrapper_home" id="wrapper_klant_ervaring">   
         <div class="col-12 wrapper_inner">
+            
+    
+                    <figure class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
+                    <button onmousedown="toggleOverlay()"><%= image_tag('ytIMG.png', class: "full_size")%></button>
+                    </figure> 
 
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <h2 class="white"><%= @article_last.title%></h2>
+
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wrap_content_inner">
+                    <h2>Hoe onze klanten ons ervaren</h2>
                     <br><br>
-                    <p class="tekst white">
-
-                        <%= @article_last.content%><br><br>
-
+                    <p class="tekst text_shade">XXX van XXXX doet XXXX. Als startende ondernemer met een passie voor XXXX wist hij al lang wat hij wilde doen. <br><br>Zijn passie is de drijvende kracht achter XXXX, wij waren de katalysator.<br><br>
                     </p>
                     <br><br>
-                    <div class="box white_box"><%= link_to " > ", articles_path, class: "pijl"%><%= link_to "Lees meer", articles_path, class: "link_tekst"%></div>
-
-            </div>
-
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <figure>
-                    <%= image_tag('missie.gif', class: "full_size")%>              </figure> 
+                    <div class="box black_box"><%= link_to " > ", stories_path, class: "pijl"%><%= link_to "Meer Verhalen", stories_path, class: "link_tekst3 link_black"%></div>
+            
             </div>
 
         </div>
     <div class="clearfix"></div>
 </article>
 
+<article class="container_fluid col-12 wrapper_home" id="wrapper_blog">   
 
-
-
-
-<article class="container_fluid col-12 wrapper_home" id="wrapper_klant_ervaring">   
-    <div class="overlay_white"></div>
-        <div class="col-12 wrapper_inner">
-            
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <figure>
-                    <button onmousedown="toggleOverlay()"><%= image_tag('ytIMG.jpg', class: "full_size")%></button>
-                    </figure> 
-            </div>
-
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <h2>Hoe onze klanten ons ervaren</h2>
-                    <br><br>
-                    <p class="tekst text_shade">XXX van XXXX doet XXXX. Als startende ondernemer met een passie voor XXXX wist hij al lang wat hij wilde doen. <br><br>Zijn passie is de drijvende kracht achter XXXX, wij waren de katalysator.<br><br>
-                    </p>
-                    <br><br>
-                    <div class="box black_box"><%= link_to " > ", stories_path, class: "pijl"%><%= link_to "Meer Verhalen", stories_path, class: "link_tekst link_black"%></div>
-            
-            </div>
-
+    <div class="col-6 wrapper_inner">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wrap_content_inner">
+            <h2><%= @article_last.title%></h2>
+            <br><br>
+            <p class="tekst">
+                <%= @article_last.content%><br><br>
+            </p>
+            <br><br>
+            <div class="box black_box"><%= link_to " > ", articles_path, class: "pijl"%><%= link_to "Lees meer", article_path(@article_last), class: "link_tekst2 link_black"%></div>
         </div>
+    </div>
+      <figure class="col-lg-6 col-md-6 col-sm-6 col-xs-12"><%= image_tag(@article_last.image.url(:medium), class: "full_size")%></figure> 
     <div class="clearfix"></div>
 </article>
 
 
 
 <article class="container_fluid col-12 wrapper_home" id="wrapper_over_ons">   
-    <div class="overlay_black"></div>
         <div class="col-12 wrapper_inner">
 
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <h2 class="white">Over Ons</h2>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wrap_content_inner">
+                    <h2>Over Ons</h2>
                     <br><br>
-                    <p class="tekst white">
+                    <p class="tekst">
 
-                        Ons werk bestaat uit kennis verspreiden over online business. Op onze pagina met <a href="#">artikelen</a> publiceren wij adviezen over branding, social media en onze andere gebieden van expertise. Stel gerust een vraag op Facebook, Instagram, twitter of per mail. Wij helpen u binnen een dag verder.<br><br>
+                        Ons werk bestaat uit kennis verspreiden over online business. Op onze pagina met <a href="#" style="color: black">artikelen</a> publiceren wij adviezen over branding, social media en onze andere gebieden van expertise. Stel gerust een vraag op Facebook, Instagram, twitter of per mail. Wij helpen u binnen een dag verder.<br><br>
 
                     </p>
                     <br><br>
-                    <div class="box white_box"><%= link_to " > ", pages_over_ons_path, class: "pijl"%><%= link_to "Meer Over Ons", pages_over_ons_path, class: "link_tekst"%></div>
+                    <div class="box black_box"><%= link_to " > ", pages_over_ons_path, class: "pijl"%><%= link_to "Meer Over Ons", pages_over_ons_path, class: "link_tekst4 link_black"%></div>
 
             </div>
 
