--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
 <title>Diqital - Partner in Digital</title>
 </head>
-<body class= "<%= controller_name %>_body">
+<body>
 
 <!--
 <p class="notice"><%= notice %></p>
