--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,41 +1,40 @@
 <%= render 'shared/navbar/navbarNormal' %>
-<article class="wrapper_alt_landing althead container_fluid">
-    <div class="overlay_black"></div>      
-    <div class="row container_home_landing place_middle">
-        <div class="col-lg-6 col-md-9 col-sm-10 hidden-xs col-centered">
-            <h2 class="white">Digitale Transformatie</h2>
-            <p class="white titel_tekst">
+
+<article class="wrapper_home_landing container_fluid">
+    
+        <div class="overlay_img_diensten"></div>
+        <div  class="hidden-lg hidden-md hidden-sm overlay_black">
+        </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <div class="row container_home_landing">
+            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+                <h2 class="white">Digitale<br><br><br><br>Transformatie</h2><br>
+                <p class="white titel_tekst">
                 Wij helpen bedrijven hun business modellen moderniseren, de ervaring voor hun klanten te verbeteren en hun online marketing efficienter te maken
             </p>
-         </div>
-         <div class="hidden-lg hidden-md hidden-sm col-xs-12">
-            <h2 class="white phoneh2">Digitale Transformatie</h2>
-            <p class="white titel_tekst">
-                Wij helpen bedrijven hun business te moderniseren.
-            </p>
+            </div>
 
-         </div>
-    </div>
-    <div class="clearfix"></div>
-  
+
+        </div>
+        
 </article>
 
-<article class="container_fluid wrapper_home">   
 
-    <div class="overlay_white"></div>
+<article class="container_fluid subform_wrapper bgt2">   
 
-        <div class="row wrapper_inner">
+        <div class="row wrap_content_inner">
             <div class="col-lg-2 col-md-3 col-sm-12 col-xs-12">
-            <h3 class="h3_diensten">Wat is Digital?</h3>
+            <h3 class="h3_diensten">Wat is Digital?</h3><hr style="color: #880015;background-color: #880015">
             </div>
             <div class="col-lg-10 col-md-9 col-sm-12 col-xs-12">
                 <p class="defining_digital_paragraph part_of_section text_shade">Digitale Transformatie betekent voor elk bedrijf iets anders. Traditionele bedrijven bevinden zich in industrien, waar men veronderstelt dat er snel geschakeld wordt. In de praktijk zijn er in elke industrie voorbeelden van bedrijven aan te wijzen die sinds het digitale tijdperk naar de top zijn gerezen. Wij helpen onze klanten digitale leiders worden. De digitale strategie is door de opkomst van het internet en Social Media drastisch veranderd. Wij helpen u een eigen strategie ontwikkelen om in het nieuwe vaarwater te manoevreren.</p>
             </div>
         </div>
 
-        <div class="row wrapper_inner" >
+
+
+        <div class="row wrap_content_inner" >
             <div class="col-lg-2 col-md-3 col-sm-12 col-xs-12">
-            <h3 class="h3_diensten">Digitale Transformatie</h3>
+            <h3 class="h3_diensten">Digitale Transformatie</h3><hr style="color: #880015;background-color: #880015">
             </div>
             <div class="col-lg-10 col-md-9 col-sm-12 col-xs-12">
             <p class="defining_digital_paragraph part_of_section text_shade">De communicatie tussen bedrijf en klant is tegenwoordig volledig anders. Er is geen moment dat je niet in contact staat of kunt staan met uw klanten. Wij helpen u een master storyteller te worden om uw klanten aan te trekken. Het bereik dat je hebt is oneindig groot. De mogelijkheid om jouw message naar buiten toe uit te dragen is er altijd. Wij helpen onze klanten een eigen identiteit te ontwikkelen.</p>          
@@ -43,9 +42,9 @@
         </div>
 
 
-        <div class="row wrapper_inner" >
+        <div class="row wrap_content_inner" >
             <div class="col-lg-2 col-md-3 col-sm-12 col-xs-12">
-            <h3 class="h3_diensten"> uw Digitale Partner</h3>
+            <h3 class="h3_diensten"> uw Digitale Partner</h3><hr style="color: #880015;background-color: #880015">
             </div>
             <div class="col-lg-10 col-md-9 col-sm-12 col-xs-12">
                 <p class="defining_digital_paragraph part_of_section text_shade">Aan het eind van de dag draait het allemaal om verkopen. Wij begrijpen dat, en dat er ook een moment komt om de trigger over te halen en tot de verkoop over te gaan. Wij helpen onze klanten succesvolle internet campagnes op te zetten op een strategische wijze.</p>            
@@ -60,7 +59,7 @@
 
 
 
-<article class="container_fluid col-12 wrapper_home white" id="wrapper_business_trans">   
+<article class="container_fluid col-12 wrapper_home white bgb wrap_content_inner" id="wrapper_business_trans">   
     <div class="overlay_black"></div>
         <div class="row wrapper_inner" >
 
@@ -102,7 +101,7 @@
 </article>
 
 
-<article class="container_fluid col-12 wrapper_home" id="wrapper_customer_exp">   
+<article class="container_fluid col-12 wrapper_home wrap_content_inner" id="wrapper_customer_exp">   
     <div class="overlay_white"></div>
         <div class="row wrapper_inner">
 
@@ -144,7 +143,7 @@
 </article>
 
 
-<article class="container_fluid col-12 wrapper_home white" id="wrapper_gevonden_worden">   
+<article class="container_fluid col-12 wrapper_home white bgb wrap_content_inner" id="wrapper_gevonden_worden">   
     <div class="overlay_black"></div>
         <div class="row wrapper_inner">
 
