--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -4,9 +4,9 @@
     
         <div class="overlay_img_diensten"></div>
         <div  class="hidden-lg hidden-md hidden-sm overlay_black">
-        </div> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </div> 
         <div class="row container_home_landing">
-            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
                 <h2 class="white">Digitale<br><br><br><br>Transformatie</h2><br>
                 <p class="white titel_tekst">
                 Wij helpen bedrijven hun business modellen moderniseren, de ervaring voor hun klanten te verbeteren en hun online marketing efficienter te maken
