--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -3,7 +3,7 @@
 <article class="wrapper_home_landing container_fluid">
     
         <div class="overlay_img_diensten"></div>
-        <div  class="hidden-lg hidden-md hidden-sm overlay_black">
+        <div  class="hidden-lg hidden-md hidden-sm overlay_black place_middle">
         </div> 
         <div class="row container_home_landing">
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
