--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,10 +32,12 @@
 
 
 <article class="container_fluid bgt1" id="wrapper_diensten"> 
-        <div class="wrap_content_inner">
+        <div class="wrap_vert">
+            <div class="wrap_hor">
             <h3>Digitale Transformatie</h3>
             <h2>Onze diensten</h2><br><br><br>
             <p class="tekst">Wij gebruiken onze kennis om een op maat gemaakte online business strategie te formuleren die gebouwd is voor de lange termijn.</p>
+            </div>
 
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-dienst">
                 <section class="section_diensten">
