--- a/app/views/shared/_contactform.html.erb
+++ b/app/views/shared/_contactform.html.erb
@@ -1,5 +1,5 @@
     <article class="container_fluid white" style="background-color: #ff4848;" id="wrapper_contact">
-    <div class="col-12 wrapper_inner_contact contact_p">
+    <div class="wrapper_inner_contact contact_p">
 
         <h3 class="white">Meer weten?</h3><br>
         <p class="tekst white">Vrijblijvend eerste consult? Heeft u een vraag? </p><br><br>
