--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -3,10 +3,10 @@
 <article class="wrapper_home_landing container_fluid">
     
         <div class="overlay_img_diensten"></div>
-        <div  class="hidden-lg hidden-md hidden-sm overlay_black place_middle">
-        </div> 
-        <div class="row container_home_landing">
-            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+        <div  class="overlay_black" style="opacity: 0.3">
+        </div>  
+        <div class="row container_home_landing place_middle">
+            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 smallhome">
                 <h2 class="white">Digitale<br><br><br><br>Transformatie</h2><br>
                 <p class="white titel_tekst">
                 Wij helpen bedrijven hun business modellen moderniseren, de ervaring voor hun klanten te verbeteren en hun online marketing efficienter te maken
@@ -19,32 +19,32 @@
 </article>
 
 
-<article class="container_fluid subform_wrapper bgt2">   
+<article class="container_fluid subform_wrapper bgt2 wrap_vert">   
 
-        <div class="row wrap_content_inner">
+        <div class="row">
             <div class="col-lg-2 col-md-3 col-sm-12 col-xs-12">
-            <h3 class="h3_diensten">Wat is Digital?</h3><hr style="color: #880015;background-color: #880015">
+            <h3 class="h3_diensten">Wat is Digital?</h3><hr class="hrrood">
             </div>
             <div class="col-lg-10 col-md-9 col-sm-12 col-xs-12">
                 <p class="defining_digital_paragraph part_of_section text_shade">Digitale Transformatie betekent voor elk bedrijf iets anders. Traditionele bedrijven bevinden zich in industrien, waar men veronderstelt dat er snel geschakeld wordt. In de praktijk zijn er in elke industrie voorbeelden van bedrijven aan te wijzen die sinds het digitale tijdperk naar de top zijn gerezen. Wij helpen onze klanten digitale leiders worden. De digitale strategie is door de opkomst van het internet en Social Media drastisch veranderd. Wij helpen u een eigen strategie ontwikkelen om in het nieuwe vaarwater te manoevreren.</p>
             </div>
         </div>
 
+<br>
 
-
-        <div class="row wrap_content_inner" >
+        <div class="row" >
             <div class="col-lg-2 col-md-3 col-sm-12 col-xs-12">
-            <h3 class="h3_diensten">Digitale Transformatie</h3><hr style="color: #880015;background-color: #880015">
+            <h3 class="h3_diensten">Digitale Transformatie</h3><hr class="hrrood">
             </div>
             <div class="col-lg-10 col-md-9 col-sm-12 col-xs-12">
             <p class="defining_digital_paragraph part_of_section text_shade">De communicatie tussen bedrijf en klant is tegenwoordig volledig anders. Er is geen moment dat je niet in contact staat of kunt staan met uw klanten. Wij helpen u een master storyteller te worden om uw klanten aan te trekken. Het bereik dat je hebt is oneindig groot. De mogelijkheid om jouw message naar buiten toe uit te dragen is er altijd. Wij helpen onze klanten een eigen identiteit te ontwikkelen.</p>          
             </div>
         </div>
 
-
-        <div class="row wrap_content_inner" >
+<br>
+        <div class="row" >
             <div class="col-lg-2 col-md-3 col-sm-12 col-xs-12">
-            <h3 class="h3_diensten"> uw Digitale Partner</h3><hr style="color: #880015;background-color: #880015">
+            <h3 class="h3_diensten"> uw Digitale Partner</h3><hr class="hrrood">
             </div>
             <div class="col-lg-10 col-md-9 col-sm-12 col-xs-12">
                 <p class="defining_digital_paragraph part_of_section text_shade">Aan het eind van de dag draait het allemaal om verkopen. Wij begrijpen dat, en dat er ook een moment komt om de trigger over te halen en tot de verkoop over te gaan. Wij helpen onze klanten succesvolle internet campagnes op te zetten op een strategische wijze.</p>            
@@ -56,35 +56,34 @@
     <div class="clearfix"></div>
 </article>
 
+<hr class="col-centered" style="height: 0.1em; width: 85%; opacity: 0.8;">
 
-
-
-<article class="container_fluid col-12 wrapper_home white bgb wrap_content_inner" id="wrapper_business_trans">   
-    <div class="overlay_black"></div>
-        <div class="row wrapper_inner" >
+<article class="container_fluid col-12 wrapper_home wrap_vert wrap_hor bgt1" id="wrapper_business_trans">   
+    
+        <div class="row" >
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <h3 class="h3_diensten white"> uw Digitale Partner</h3>
-            <h4 class="white">subtitle</h4>
+            <h3 class="h3_diensten"> uw Digitale Partner</h3>
+            <h4>subtitle</h4>
             <p>fesgdrhtjykutrgefdwsdfegrhtyj kujthrgefdw</p>
             </div>
 
         </div>
 
-        <div class="row wrapper_inner">
+        <div class="row">
 
             <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
             <ul>
                 <li>
-                <h5 class="white">nummer 1</h4>
+                <h5>nummer 1</h5>
                 <p>teksttekstteksergdef erhtgewefrg ewrggefgrth werggrthe etrergthge tgrgtegthre trrgthe regrg</p>
-                </li>
+                </li><br>
                 <li>
-                <h5 class="white">nummer 2</h4>
+                <h5>nummer 2</h5>
                 <p>teksttekstteksergdef erhtgewefrg ewrggefgrth werggrthe etrergthge tgrgtegthre trrgthe regrg</p>
-                </li>
+                </li><br>
                 <li>
-                <h5 class="white">nummer 3</h4>
+                <h5>nummer 3</h5>
                 <p>teksttekstteksergdef erhtgewefrg ewrggefgrth werggrthe etrergthge tgrgtegthre trrgthe regrg</p>
                 </li>
             </ul>
@@ -99,11 +98,10 @@
 
     <div class="clearfix"></div>
 </article>
+<hr class="col-centered" style="height: 0.1em; width: 85%; opacity: 0.8;">
 
-
-<article class="container_fluid col-12 wrapper_home wrap_content_inner" id="wrapper_customer_exp">   
-    <div class="overlay_white"></div>
-        <div class="row wrapper_inner">
+<article class="container_fluid col-12 wrapper_home wrap_vert wrap_hor bgt2" id="wrapper_customer_exp">   
+        <div class="row ">
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <h3 class="h3_diensten"> uw Digitale Partner</h3>
@@ -113,20 +111,20 @@
 
         </div>
 
-        <div class="row wrapper_inner">
+        <div class="row ">
 
             <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
             <ul>
                 <li>
-                <h5>nummer 1</h4>
+                <h5>nummer 1</h5>
                 <p>teksttekstteksergdef erhtgewefrg ewrggefgrth werggrthe etrergthge tgrgtegthre trrgthe regrg</p>
-                </li>
+                </li><br>
                 <li>
-                <h5>nummer 2</h4>
+                <h5>nummer 2</h5>
                 <p>teksttekstteksergdef erhtgewefrg ewrggefgrth werggrthe etrergthge tgrgtegthre trrgthe regrg</p>
-                </li>
+                </li><br>
                 <li>
-                <h5>nummer 3</h4>
+                <h5>nummer 3</h5>
                 <p>teksttekstteksergdef erhtgewefrg ewrggefgrth werggrthe etrergthge tgrgtegthre trrgthe regrg</p>
                 </li>
             </ul>
@@ -142,33 +140,33 @@
     <div class="clearfix"></div>
 </article>
 
+<hr class="col-centered" style="height: 0.1em; width: 85%; opacity: 0.8;">
 
-<article class="container_fluid col-12 wrapper_home white bgb wrap_content_inner" id="wrapper_gevonden_worden">   
-    <div class="overlay_black"></div>
-        <div class="row wrapper_inner">
+<article class="container_fluid col-12 wrapper_home wrap_vert wrap_hor bgt1" id="wrapper_gevonden_worden">   
+        <div class="row ">
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <h3 class="h3_diensten white"> uw Digitale Partner</h3>
-            <h4 class="white">subtitle</h4>
+            <h3 class="h3_diensten"> uw Digitale Partner</h3>
+            <h4>subtitle</h4>
             <p>fesgdrhtjykutrgefdwsdfegr htyjkujthrgefdw</p>
             </div>
 
         </div>
 
-        <div class="row wrapper_inner">
+        <div class="row ">
 
             <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
             <ul>
                 <li>
-                <h5 class="white">nummer 1</h4>
+                <h5>nummer 1</h5>
                 <p>teksttekstteksergdef erhtgewefrg ewrggefgrth werggrthe etrergthge tgrgtegthre trrgthe regrg</p>
-                </li>
+                </li><br>
                 <li>
-                <h5 class="white">nummer 2</h4>
+                <h5>nummer 2</h5>
                 <p>teksttekstteksergdef erhtgewefrg ewrggefgrth werggrthe etrergthge tgrgtegthre trrgthe regrg</p>
-                </li>
+                </li><br>
                 <li>
-                <h5 class="white">nummer 3</h4>
+                <h5>nummer 3</h5>
                 <p>teksttekstteksergdef erhtgewefrg ewrggefgrth werggrthe etrergthge tgrgtegthre trrgthe regrg</p>
                 </li>
             </ul>
