--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -19,7 +19,7 @@
 
         <div class="col-lg-6 col-md-7 col-sm-7 col-xs-11 col-lg-offset-1 col-md-offset-1 col-sm-offset-0 col-xs-offset-1">
             <% if user_signed_in? %>
-            <p><%= link_to 'Destroy', article_path(@article), method: :delete, data: { confirm: 'Are you sure?' }, class: "black" %>
+            <p class="pull-right"><%= link_to 'Destroy', article_path(@article), method: :delete, data: { confirm: 'Are you sure?' }, class: "black" %>
             <%= link_to 'Edit', edit_article_path(@article), class: "black" %>
             <% end %>
 
