--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -69,9 +69,8 @@
 
 <article class="container_fluid wrapper_home bgt2" id="wrapper_klant_ervaring">              
     
-            <figure onmousedown="toggleOverlay()" class="affoe1 pull-left">
-
-            <%= image_tag('ytIMG.png', class: "full_size_img")%>
+            <figure onmousedown="toggleOverlay()" class="affoe1 pull-left">    
+            <%= image_tag('ytIMG.jpg', class: "full_size_img")%>
             </figure>
 
          
@@ -109,6 +108,7 @@
     <div class="clearfix"></div>
 </article>
 
+<hr class="col-centered" style="height: 0.1em; width: 85%; opacity: 0.4;">
 
 <article class="container_fluid wrapper_home bgt2" id="wrapper_over_ons">              
     
